# AI-course

./: .gitignore  README.md
Project_01_TaskManager/: README.md
Project_01_TaskManager/Agent/: .env.example  agent_service.py  main.py  todo_service.py
Project_01_TaskManager/task-manager-client/: package-lock.json  package.json
Project_01_TaskManager/task-manager-client/public/: index.html
Project_01_TaskManager/task-manager-client/src/: App.css  App.js
Project_02_Prompt2CLI/: README.md  main.py  pyproject.toml
Project_03_Rag/: README.md
Project_03_Rag/project-agent/: extracted_data.json  extractor.py  indexer.py  main.py  models.py  pyproject.toml  run_pipeline.py  workflow.py  workflow_graph.html
Project_03_Rag/project-agent/data/: CODE_ANALYSIS.md  COMPLETION_REPORT.md  ENHANCEMENTS.md  EXAMPLES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.md  TECHNICAL_DECISIONS.md
Project_03_Rag/project-agent/prompts/: RAG.md
Project_03_Rag/project-agent/storage/: default__vector_store.json  docstore.json  index_store.json
Project_03_Rag/task_manager/: FILE_MAP.md  app.py  requirements.txt  run_gui.py  setup.py  simple_server.py
Project_03_Rag/task_manager/docs/: AGENTIC_ACTIVITIES.md  DESIGN.md  DEVELOPMENT.md
Project_03_Rag/task_manager/gemini_docs/: AGENT_LOG.md  GEMINI_SYSTEM_ARCHITECTURE.md  UI_SPEC_VISION.md
Project_03_Rag/task_manager/src/: __init__.py  cli.py  gui.py  task.py  task_manager.py
Project_03_Rag/task_manager/templates/: index.html
Project_03_Rag/task_manager/tests/: test_task.py  test_task_manager.py
